# apps/api/src/modules/product-variants/dto/create-product-variant.dto.ts
@@ -1,6 +1,10 @@
 import { createZodDto } from 'nestjs-zod';
 import { ProductVariantSchema } from '@repo/types';
+import { z } from 'zod';
 
-export class CreateProductVariantDto extends createZodDto(
-  ProductVariantSchema.omit({ id: true, created_at: true, attributes: true })
-) {}
+const schema = ProductVariantSchema.omit({ id: true, created_at: true, attributes: true }).extend({
+  attribute_value_ids: z.array(z.number()).optional(),
+});
+
+export class CreateProductVariantDto extends createZodDto(schema) {}
+
